# script_bpe

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_ngrams.py  benchmark.txt  dump.py  eda.py  eda_ngrams.py  password_checker.py  pyproject.toml  run_all_variants.py  run_all_variants.sh  setup.py  surr.py  train_super.py
paper_utils/: benchmark_cpp.py  blocks.ipynb  monolingual_compression.ipynb  multilingual_compression.ipynb  train_monolingual.sh  train_multilingual.sh
results/super/: ngram_results_CulturaX-subsample-100-bal2_scriptenc_cb_v256000_n5_test.json  ngram_results_eng_latn_300mb_scriptenc_cb_v64000.json  ngram_results_kor_hang_300mb_scriptenc_cb_v64000.json  ngram_results_kor_hang_300mb_scriptenc_cb_v64000_n10.json
results/unigram_tokenizers/swift/n100/: scriptenc_cb.md
script_bpe/: __init__.py  train.py  utils.py
script_bpe/bpe/: __init__.py  scaffold.py  stats.py  tokenizer.py  train.py
script_bpe/bpe/fast/: benchmark_cpp_fast.cpp  bpe_core.cpp  bpe_core.hpp  bpe_core_absl.cpp  bpe_core_absl.hpp  bpe_core_gtl.cpp  bpe_core_gtl.hpp  bpe_core_pthash.cpp  bpe_core_pthash.hpp  bpe_core_robin.cpp  bpe_core_robin.hpp  python_bindings.cpp  tokenizer.py
script_bpe/bpe/fast/heap/: min_max_heap.hpp
script_bpe/corpus/: __init__.py  registry.py
script_bpe/encoding/: __init__.py  encoder.py
script_bpe/pretokenize/: __init__.py  base.py  regex.py  scriptencoding.py
script_bpe/unigram/: __init__.py  model.py  train.py
tests/: conftest.py  test_script_encoding.py
tests/bpe/: test_bpe_train.py  test_fast_tokenizer.py  test_merge.py  test_scaffold.py
tests/corpus/: test_partitioned_corpus.py
tests/pretokenize/: test_merge_rules.py  test_regex.py  test_registry.py  test_scriptenc.py
