[project]
name = "script_bpe"
version = "0.5.0"
description = "BPE with support for SCRIPT encoding"
authors = [
    {name = "Sander Land", email = "sander@cohere.com"},
    {name = "Catherine Arnett", email = "catherine@eleuther.ai"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "polars>=1.29.0",
    "numpy>=2.2.4",
    "regex>=2024.11.6",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "pytest>=8.3.5",
    "pip>=25.1.1", # avoids jupyter notebook in vscode issues
    "jinja2>=3.1.6",
    "pybind11>=2.10.0",
]



[project.scripts]
train = "script_bpe.train:main"

[tool.black]
line-length = 120

[tool.isort]
profile="black"

[build-system]
requires = ["setuptools>=45", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["script_bpe*"]

[[tool.setuptools.ext-modules]]
name = "script_bpe.bpe.fast.fast_tokenizer_cpp"
sources = ["script_bpe/bpe/fast/python_bindings.cpp", "script_bpe/bpe/fast/bpe_core.cpp"]
language = "c++"
extra-compile-args = ["-I/Users/sander/.cache/uv/archive-v0/3TQWJN4SjXSTw9221a1vq/pybind11/include"]
